--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,8 @@ header {
 	height: 100%;
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	margin-left: 13px;
+	/*justify-content: center;*/
 }
 
 .logo {
