Add margin for screens wider than 749px.

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -73,5 +73,22 @@
 	.header-text-container > p {
 		font-size: 1.07em;
 	}
+}
+
+@media screen and (min-width: 750px) {
+
+	body {
+		width: 80%;
+		margin: auto;
+	}
+
+	.logo-container {
+		margin-left: 0;
+	}
+
+	.header-text-container {
+		margin: 0;
+	}
+
 
 }
