--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,13 @@ body {
 	font-family: 'El Messiri', Arial, sans-serif;
 }
 
+.full-width {
+	width: 100%;
+}
+
 /* Header Elements */
 
 header {
-	width: 100%;
 	height: 120px;
 	box-shadow: 0 0.25em 0 0 #7d97ad;
 	display: flex;
@@ -47,7 +50,6 @@ header {
 	flex-direction: column;
 	justify-content: center;
 	margin-right: 13px;
-	color: #2d3c49;
 }
 
 .header-text-container > h2 {
@@ -67,4 +69,74 @@ header {
 	overflow: hidden;
 	display: flex;
 	justify-content: center;
+}
+
+/* Featured Works */
+
+.work-exhibit {
+	display: flex;
+	flex-wrap: wrap;
+	margin-top: 15px;
+	justify-content: center;
+}
+
+.work-section-title {
+	text-align: center;
+	margin-bottom: 7px;
+	margin-top: -10px;
+}
+
+span {
+	font-size: 1.7em;
+}
+
+.work {
+	width: 92%;
+	margin-bottom: 30px;
+	text-align: center;
+	padding: 15px;
+	box-shadow: 0 0 0.3em #7d97ad;
+}
+
+.work-title {
+	font-size: 1.5em;
+	margin-bottom: -7px;
+	text-align: center;
+}
+
+.work-link {
+	font-size: 0.83em;
+	text-decoration: none;
+	padding-top: 16px;
+	padding-bottom: 16px;
+
+}
+
+/* Footer */
+
+footer {
+	display: flex;
+	height: 2em;
+	background-color: #2d3c49;
+	color: white;
+}
+
+p {
+	margin: auto;
+	text-align: center;
+}
+
+i {
+	margin-right: 5px;
+	vertical-align: middle;
+}
+
+/* Colors */
+
+.dark {
+	color: #2d3c49;
+}
+
+.light {
+	color: #7d97ad;
 }
